[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/UI/UI_button.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/UI_button3.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/UI_square1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Choko.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/Prefabs/PauseScreen.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 21
outline_size = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 5 )

[node name="Invetory" type="Popup"]
pause_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="molder" type="TextureRect" parent="."]
margin_left = 150.0
margin_top = 29.0
margin_right = 438.0
margin_bottom = 279.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 168.0
margin_top = 48.0
margin_right = 415.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pausado"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_return" type="TextureButton" parent="."]
anchor_left = 0.384
anchor_top = 0.58
anchor_right = 0.384
anchor_bottom = 0.58
margin_left = 227.0
margin_top = 87.0
margin_right = 359.0
margin_bottom = 129.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="btn_return"]
margin_left = 5.0
margin_top = 1.0
margin_right = 128.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Retonar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_menu" type="TextureButton" parent="."]
anchor_left = 0.384
anchor_top = 0.58
anchor_right = 0.384
anchor_bottom = 0.58
margin_left = 228.0
margin_top = 142.0
margin_right = 360.0
margin_bottom = 184.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="btn_menu"]
margin_left = 5.0
margin_top = 1.0
margin_right = 123.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Menu Principal"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_exit" type="TextureButton" parent="."]
anchor_left = 0.384
anchor_top = 0.58
anchor_right = 0.384
anchor_bottom = 0.58
margin_left = 227.0
margin_top = 196.0
margin_right = 359.0
margin_bottom = 238.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="btn_exit"]
margin_left = 5.0
margin_top = 1.0
margin_right = 128.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="btn_return" to="." method="_on_btn_return_pressed"]
[connection signal="pressed" from="btn_menu" to="." method="_on_btn_menu_pressed"]
[connection signal="pressed" from="btn_exit" to="." method="_on_btn_exit_pressed"]
